完成首页功能，yes!!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
     <string name="since">copyright ©2017 Xiho.</string>
     <string name="gitHub">GitHub</string>
+    <string name="recycle_footer_no_more_string">-- 我是有底线的 --</string>
 </resources>
