--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,8 @@
     <string name="empty_view_hint">暂时木有内容呀~~</string>
     <string name="splash_text">每日精选视频，让你大开眼界</string>
 
-    <string name="copy_right_notice">内容部分数据归原公司《开眼Eyepetizer》版权所有</string>
-    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
-    <string name="since">copyright ©2017 Xiho.</string>
-    <string name="gitHub">GitHub</string>
+    <string name="not_use_commercial">内容部分数据归原公司《开眼Eyepetizer》版权所有\n\n本APP只供学习交流和研究之用，\n请勿用作商业用途！\n\n\ncopyright ©2018 Jacky.</string>
+    <string name="gitHub">原作者GitHub</string>
     <string name="recycle_footer_no_more_string">-- 我是有底线的 --</string>
 
     <string name="discover_tab_title_attention">关注</string>
