bug fix ,观看记录还有点问题，待修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="hot_tab_title_week">周排行</string>
     <string name="hot_tab_title_month">月排行</string>
     <string name="hot_tab_title_total">总排行</string>
+
+    <string name="watch_history_title">观看记录</string>
 </resources>
