--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="splash_text">每日精选视频，让你大开眼界</string>
 
     <string name="not_use_commercial">内容部分数据归原公司《开眼Eyepetizer》版权所有\n\n本APP只供学习交流和研究之用，\n请勿用作商业用途！\n\n\ncopyright ©2018 Jacky.</string>
-    <string name="gitHub">原作者GitHub</string>
+    <string name="check_update">检查更新</string>
     <string name="recycle_footer_no_more_string">-- 我是有底线的 --</string>
 
     <string name="discover_tab_title_attention">关注</string>
